force-app/main/default/objects/EYI_Welcome_Call_Management__c/EYI_Welcome_Call_Management__c.object-meta.xml
<CustomObject>
    <label>Welcome Call Management</label>
    <nameField>
        <displayFormat>WCM-{000000}</displayFormat>
        <label>Welcome Call Management Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Welcome Call Managements</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>