force-app/main/default/objects/EYI_Welcome_Call_Management__c/fields/EYI_Escalation_Level__c.field-meta.xml
<CustomField>
    <fullName>EYI_Escalation_Level__c</fullName>
    <label>Escalation Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>L1</fullName>
            </value>
            <value>
                <fullName>L2</fullName>
            </value>
            <value>
                <fullName>L3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>