force-app/main/default/objects/EYI_Welcome_Call_Management__c/fields/EYI_Initiation_Date__c.field-meta.xml
<CustomField>
    <fullName>EYI_Initiation_Date__c</fullName>
    <description>Once &quot;Initiate welcome call&quot; button clicked captured that date.</description>
    <label>Initiation Date</label>
    <type>DateTime</type>
</CustomField>