force-app/main/default/objects/EYI_Welcome_Call_Management__c/fields/EYI_Is_NCF_Done__c.field-meta.xml
<CustomField>
    <fullName>EYI_Is_NCF_Done__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is NCF Done</label>
    <type>Checkbox</type>
</CustomField>