force-app/main/default/objects/EYI_Welcome_Call_Management__c/fields/EYI_Is_Welcome_NCF_Letter_sent__c.field-meta.xml
<CustomField>
    <fullName>EYI_Is_Welcome_NCF_Letter_sent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Welcome &amp; NCF Letter sent</label>
    <type>Checkbox</type>
</CustomField>