force-app/main/default/objects/EYI_Welcome_Call_Management__c/fields/EYI_OnBoarding_Manager__c.field-meta.xml
<CustomField>
    <fullName>EYI_OnBoarding_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>OnBoarding Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Welcome_Call_Managements</relationshipName>
    <type>Lookup</type>
</CustomField>