force-app/main/default/objects/EYI_Welcome_Call_Management__c/fields/EYI_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>EYI_Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Welcome Call Managements</relationshipLabel>
    <relationshipName>Welcome_Call_Managements</relationshipName>
    <type>Lookup</type>
</CustomField>