force-app/main/default/objects/EYI_Welcome_Call_Management__c/fields/EYI_Stage__c.field-meta.xml
<CustomField>
    <fullName>EYI_Stage__c</fullName>
    <label>Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Booked</fullName>
            </value>
            <value>
                <fullName>Booking Form Accepted</fullName>
            </value>
            <value>
                <fullName>Booking Form Rejected</fullName>
            </value>
            <value>
                <fullName>Booking Form Check on Hold</fullName>
            </value>
            <value>
                <fullName>Welcome Call Accepted</fullName>
            </value>
            <value>
                <fullName>Welcome Call Rejected</fullName>
            </value>
            <value>
                <fullName>Welcome Call on Hold</fullName>
            </value>
            <value>
                <fullName>Sold</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>