force-app/main/default/objects/EYI_Welcome_Call_Management__c/fields/EYI_Welcome_and_NCF_Letter_Sent_Date__c.field-meta.xml
<CustomField>
    <fullName>EYI_Welcome_and_NCF_Letter_Sent_Date__c</fullName>
    <label>Welcome and NCF Letter Sent Date</label>
    <type>DateTime</type>
</CustomField>