force-app/main/default/objects/EYI_Welcome_Call_Management__c/fields/EYI_Welcome_Call_Accepted_Date__c.field-meta.xml
<CustomField>
    <fullName>EYI_Welcome_Call_Accepted_Date__c</fullName>
    <description>Once Status is changed from &apos;Booking Form Accepted&apos; to &apos;Welcome Call Accepted&apos;</description>
    <label>Welcome Call Accepted Date</label>
    <type>DateTime</type>
</CustomField>