force-app/main/default/objects/EYI_Welcome_Call_Management__c/fields/EYI_Welcome_Call_Management__c.field-meta.xml
<CustomField>
    <fullName>EYI_Welcome_Call_Management__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Welcome Call Management</label>
    <referenceTo>EYI_Welcome_Call_Management__c</referenceTo>
    <relationshipLabel>Welcome Call Managements</relationshipLabel>
    <relationshipName>Welcome_Call_Managements</relationshipName>
    <type>Lookup</type>
</CustomField>