force-app/main/default/objects/EYI_Welcome_Call_Management__c/fields/EYI_Welcome_Call_Rejected_Date__c.field-meta.xml
<CustomField>
    <fullName>EYI_Welcome_Call_Rejected_Date__c</fullName>
    <label>Welcome Call Rejected Date</label>
    <type>DateTime</type>
</CustomField>