force-app/main/default/objects/EYI_Welcome_Call_Management__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>EYI_Stage__c</columns>
    <columns>EYI_Escalation_Level__c</columns>
    <columns>EYI_Opportunity__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>